crates/litert-lm-rust/c/engine.h

// Opaque pointer for the LiteRT LM Engine.
//
// Added in version 0.1.0.
typedef struct LiteRtLmEngine LiteRtLmEngine;
// Opaque pointer for the LiteRT LM Session.
//
// Added in version 0.1.0.
typedef struct LiteRtLmSession LiteRtLmSession;
// Opaque pointer for the LiteRT LM Benchmark Info.
//
// Added in version 0.1.0.
typedef struct LiteRtLmBenchmarkInfo LiteRtLmBenchmarkInfo;
// Opaque pointer for the LiteRT LM Conversation.
//
// Added in version 0.1.0.
typedef struct LiteRtLmConversation LiteRtLmConversation;
// Opaque pointer for the LiteRT LM Conversation Optional Args.
//
// Added in version 0.1.0.
typedef struct LiteRtLmConversationOptionalArgs
    LiteRtLmConversationOptionalArgs;
// Opaque pointer for a JSON response.
//
// Added in version 0.1.0.
typedef struct LiteRtLmJsonResponse LiteRtLmJsonResponse;
// Opaque pointer for a detokenize result.
// Use `litert_lm_detokenize_result_delete` to free memory.
//
// Added in version 0.1.0.
typedef struct LiteRtLmDetokenizeResult LiteRtLmDetokenizeResult;
// Opaque pointer for a tokenize result.
// Use `litert_lm_tokenize_result_delete` to free memory.
//
// Added in version 0.1.0.
typedef struct LiteRtLmTokenizeResult LiteRtLmTokenizeResult;
// Represents the type of a TokenUnion.
//
// Added in version 0.1.0.
typedef enum {
  kLiteRtLmTokenUnionTypeString = 0,
  kLiteRtLmTokenUnionTypeIds = 1,
} LiteRtLmTokenUnionType;
// Opaque pointer for LiteRT LM Token Union.
// Represents a single start or stop token, which could be either a string or a
// sequence of token ids.
// Use `litert_lm_token_union_delete` to free memory.
//
// Added in version 0.1.0.
typedef struct LiteRtLmTokenUnion LiteRtLmTokenUnion;
// Opaque pointer for LiteRT LM Token Unions.
// Represents a collection of TokenUnion, typically used for model stop
// conditions.
// Use `litert_lm_token_unions_delete` to free memory.
//
// Added in version 0.1.0.
typedef struct LiteRtLmTokenUnions LiteRtLmTokenUnions;
// Opaque pointer for LiteRT LM Input Data.
// Use `litert_lm_input_data_delete` to free memory.
//
// Added in version 0.1.0.
typedef struct LiteRtLmInputData LiteRtLmInputData;
// Opaque pointer for LiteRT LM Conversation Config.
//
// Added in version 0.1.0.
typedef struct LiteRtLmConversationConfig LiteRtLmConversationConfig;
// Opaque pointer for LiteRT LM Stream Chunk.
// This object represents a single chunk of data returned during streaming.
// It is owned by the library and is only valid for the duration of the
// callback.
//
// Added in version 0.1.0.
typedef struct LiteRtLmStreamChunk LiteRtLmStreamChunk;
// Callback for streaming responses.
// `callback_data` is a pointer to user-defined data passed to the stream
// function. `chunk` is a pointer to the stream chunk object. It's only valid
// for the duration of the call.
//
// Added in version 0.1.0.
typedef void (*LiteRtLmStreamCallback)(void* callback_data,
                                       const LiteRtLmStreamChunk* chunk);
// Starts the decoding process for the model to predict the response based
// on the input prompt/query added after using litert_lm_session_run_prefill.
// This is a non-blocking call that will stream responses via a callback.
//
// @param session The session to use.
// @param callback The callback function to receive response chunks.
// @param callback_data A pointer to user data that will be passed to the
// callback.
// @return 0 on success, non-zero on failure.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
int litert_lm_session_run_decode_async(LiteRtLmSession* session,
                                       LiteRtLmStreamCallback callback,
                                       void* callback_data);
// Generates content from the input prompt and streams the response via a
// callback. This is a non-blocking call that will invoke the callback from a
// background thread for each chunk.
//
// @param session The session to use for generation.
// @param inputs An array of LiteRtLmInputData structs representing the
// multimodal
//   input.
// @param num_inputs The number of LiteRtLmInputData structs in the array.
// @param callback The callback function to receive response chunks.
// @param callback_data A pointer to user data that will be passed to the
// callback.
// @return 0 on success, non-zero on failure to start the stream.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
int litert_lm_session_generate_content_stream(
    LiteRtLmSession* session, const LiteRtLmInputData* const* inputs,
    size_t num_inputs, LiteRtLmStreamCallback callback, void* callback_data);
// Creates a LiteRT LM Conversation. The caller is responsible for destroying
// the conversation using `litert_lm_conversation_delete`.
//
// @param engine The engine to create the conversation from.
// @param config The conversation config to use. If NULL, the default config
//   will be used.
// @return A pointer to the created conversation, or NULL on failure.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmConversation* litert_lm_conversation_create(
    LiteRtLmEngine* engine, LiteRtLmConversationConfig* config);
// Destroys a LiteRT LM Conversation.
//
// @param conversation The conversation to destroy.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_delete(LiteRtLmConversation* conversation);
// Clones a LiteRT LM Conversation, duplicating its prefilled state.
// The caller is responsible for destroying the cloned conversation using
// `litert_lm_conversation_delete`.
//
// @param conversation The conversation to clone.
// @return A pointer to the cloned conversation, or NULL on failure.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmConversation* litert_lm_conversation_clone(
    LiteRtLmConversation* conversation);
// Sends a message to the conversation and returns the response.
// This is a blocking call.
//
// @param conversation The conversation to use.
// @param message_json A JSON string representing the message to send.
// @param extra_context A JSON string representing the extra context to use.
// @param optional_args A pointer to the optional arguments to use.
// @return A pointer to the JSON response, or NULL on failure. The caller is
//   responsible for deleting the response using
//   `litert_lm_json_response_delete`.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmJsonResponse* litert_lm_conversation_send_message(
    LiteRtLmConversation* conversation, const char* message_json,
    const char* extra_context,
    const LiteRtLmConversationOptionalArgs* optional_args);
// Destroys a LiteRT LM Json Response object.
//
// @param response The response to destroy.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_json_response_delete(LiteRtLmJsonResponse* response);
// Returns the JSON response string from a response object.
//
// @param response The response object.
// @return The response JSON string. The returned string is owned by the
//   `response` object and is valid only for its lifetime. Returns NULL if
//   response is NULL.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
const char* litert_lm_json_response_get_string(
    const LiteRtLmJsonResponse* response);
// Sends a message to the conversation and streams the response via a
// callback. This is a non-blocking call that will invoke the callback from a
// background thread for each chunk.
//
// @param conversation The conversation to use.
// @param message_json A JSON string representing the message to send.
// @param extra_context A JSON string representing the extra context to use.
// @param optional_args A pointer to the optional arguments to use.
// @param callback The callback function to receive response chunks.
// @param callback_data A pointer to user data that will be passed to the
// callback.
// @return 0 on success, non-zero on failure to start the stream.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
int litert_lm_conversation_send_message_stream(
    LiteRtLmConversation* conversation, const char* message_json,
    const char* extra_context,
    const LiteRtLmConversationOptionalArgs* optional_args,
    LiteRtLmStreamCallback callback, void* callback_data);
// Renders the message into a string according to the template.
//
// This function does not need to be called for actual message sending, as the
// `litert_lm_conversation_send_message` and
// `litert_lm_conversation_send_message_stream` functions will handle rendering
// internally.
//
// @param conversation The conversation instance.
// @param message_json A JSON string representing the message to render.
// @return A pointer to the rendered string, or NULL on failure. The returned
//   string is owned by the `conversation` object and is valid until the next
//   call to this function or until the conversation is deleted.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
const char* litert_lm_conversation_render_message_to_string(
    LiteRtLmConversation* conversation, const char* message_json);
// Renders the preface into a string according to the template.
//
// @param conversation The conversation instance.
// @return A pointer to the rendered string, or NULL on failure. The returned
//   string is owned by the `conversation` object and is valid until the next
//   call to this function or until the conversation is deleted.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
const char* litert_lm_conversation_render_preface_to_string(
    LiteRtLmConversation* conversation);
// Cancels the ongoing inference process, for asynchronous inference.
//
// @param conversation The conversation to cancel the inference for.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_cancel_process(LiteRtLmConversation* conversation);
// Retrieves the benchmark information from the conversation. The caller is
// responsible for destroying the benchmark info using
// `litert_lm_benchmark_info_delete`.
//
// @param conversation The conversation to get the benchmark info from.
// @return A pointer to the benchmark info, or NULL on failure.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmBenchmarkInfo* litert_lm_conversation_get_benchmark_info(
    LiteRtLmConversation* conversation);
// Gets the number of tokens in the conversation KV Cache (prefill + decode).
// Returns the number of tokens, or a negative value on failure.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
int litert_lm_conversation_get_token_count(LiteRtLmConversation* conversation);
// Tokenizes text using the engine's tokenizer.
//
// @param engine The engine instance.
// @param text The UTF-8 string to tokenize.
// @return A pointer to the tokenize result, or NULL on failure.
//   The caller is responsible for deleting the result using
//   `litert_lm_tokenize_result_delete`.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenizeResult* litert_lm_engine_tokenize(LiteRtLmEngine* engine,
                                                  const char* text);
// Destroys a LiteRT LM Tokenize Result.
//
// @param result The tokenize result to destroy.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_tokenize_result_delete(LiteRtLmTokenizeResult* result);
// Returns the token ids from a tokenize result.
//
// @param result The tokenize result.
// @return A pointer to the internal array of token ids. The returned pointer
//   is valid only for the lifetime of the `result` object.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
const int* litert_lm_tokenize_result_get_tokens(
    const LiteRtLmTokenizeResult* result);
// Returns the number of token ids from a tokenize result.
//
// @param result The tokenize result.
// @return The number of token ids.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
size_t litert_lm_tokenize_result_get_num_tokens(
    const LiteRtLmTokenizeResult* result);
// Detokenizes token ids using the engine's tokenizer.
//
// @param engine The engine instance.
// @param tokens An array of token ids to detokenize.
// @param num_tokens The number of token ids in the array.
// @return A pointer to the detokenize result, or NULL on failure.
//   The caller is responsible for deleting the result using
//   `litert_lm_detokenize_result_delete`.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmDetokenizeResult* litert_lm_engine_detokenize(LiteRtLmEngine* engine,
                                                      const int* tokens,
                                                      size_t num_tokens);
// Destroys a LiteRT LM Detokenize Result.
//
// @param result The detokenize result to destroy.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_detokenize_result_delete(LiteRtLmDetokenizeResult* result);
// Returns the string from a detokenize result.
//
// @param result The detokenize result.
// @return The detokenized UTF-8 string. The returned string is owned by the
//   `result` object and is valid only for its lifetime.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
const char* litert_lm_detokenize_result_get_string(
    const LiteRtLmDetokenizeResult* result);
// Destroys a LiteRT LM Token Union.
//
// @param token_union The token union to destroy.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_token_union_delete(LiteRtLmTokenUnion* token_union);
// Returns the type of the token union.
//
// @param token_union The token union.
// @return The type of the token union.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnionType litert_lm_token_union_get_type(
    const LiteRtLmTokenUnion* token_union);
// Returns the string value from a token union.
//
// @param token_union The token union.
// @return The string value, or NULL if the type is not
//   kLiteRtLmTokenUnionTypeString. The returned string is owned by the
//   `token_union` object and is valid only for its lifetime.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
const char* litert_lm_token_union_get_string(
    const LiteRtLmTokenUnion* token_union);
// Returns the token ids from a token union.
//
// @param token_union The token union.
// @param out_tokens A pointer to receive the internal array of token ids.
//   The received pointer is valid only for the lifetime of the `token_union`
//   object.
// @param out_num_tokens A pointer to receive the number of token ids.
// @return 0 on success, non-zero if the type is not kLiteRtLmTokenUnionTypeIds.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
int litert_lm_token_union_get_ids(const LiteRtLmTokenUnion* token_union,
                                  const int** out_tokens,
                                  size_t* out_num_tokens);
// Destroys a LiteRT LM Token Unions object.
//
// @param tokens The token unions object to destroy.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
void litert_lm_token_unions_delete(LiteRtLmTokenUnions* tokens);
// Returns the number of token unions in the collection.
//
// @param tokens The token unions object.
// @return The number of token unions.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
size_t litert_lm_token_unions_get_num_tokens(const LiteRtLmTokenUnions* tokens);
// Returns the token union at a given index from a collection.
//
// @param tokens The token unions collection.
// @param index The index of the token union.
// @return A pointer to the token union at the given index, or NULL if the index
//   is out of bounds. The caller is responsible for deleting the result using
//   `litert_lm_token_union_delete`.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnion* litert_lm_token_unions_get_token_at(
    const LiteRtLmTokenUnions* tokens, size_t index);
// Returns the configured start token (BOS), if any.
//
// @param engine The engine instance.
// @return A pointer to the start token, or NULL if none configured. The caller
//   is responsible for deleting the result using
//   `litert_lm_token_union_delete`.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnion* litert_lm_engine_get_start_token(LiteRtLmEngine* engine);
// Returns the configured stop tokens (EOS).
//
// @param engine The engine instance.
// @return A pointer to the stop tokens collection, or NULL if none configured.
//   The caller is responsible for deleting the result using
//   `litert_lm_token_unions_delete`.
//
// Added in version 0.1.0.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnions* litert_lm_engine_get_stop_tokens(LiteRtLmEngine* engine);