crates/litert-lm-rust/src/bindings.rs

pub type LiteRtLmStreamCallback = ::std::option::Option<
    unsafe extern "C" fn(
        callback_data: *mut ::std::os::raw::c_void,
        chunk: *const LiteRtLmStreamChunk,
    ),
>;
unsafe extern "C" {
    pub fn litert_lm_session_run_decode_async(
        session: *mut LiteRtLmSession,
        callback: LiteRtLmStreamCallback,
        callback_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_session_generate_content_stream(
        session: *mut LiteRtLmSession,
        inputs: *const *const LiteRtLmInputData,
        num_inputs: usize,
        callback: LiteRtLmStreamCallback,
        callback_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_create(
        engine: *mut LiteRtLmEngine,
        config: *mut LiteRtLmConversationConfig,
    ) -> *mut LiteRtLmConversation;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_delete(conversation: *mut LiteRtLmConversation);
}
unsafe extern "C" {
    pub fn litert_lm_conversation_clone(
        conversation: *mut LiteRtLmConversation,
    ) -> *mut LiteRtLmConversation;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_send_message(
        conversation: *mut LiteRtLmConversation,
        message_json: *const ::std::os::raw::c_char,
        extra_context: *const ::std::os::raw::c_char,
        optional_args: *const LiteRtLmConversationOptionalArgs,
    ) -> *mut LiteRtLmJsonResponse;
}
unsafe extern "C" {
    pub fn litert_lm_json_response_delete(response: *mut LiteRtLmJsonResponse);
}
unsafe extern "C" {
    pub fn litert_lm_json_response_get_string(
        response: *const LiteRtLmJsonResponse,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_send_message_stream(
        conversation: *mut LiteRtLmConversation,
        message_json: *const ::std::os::raw::c_char,
        extra_context: *const ::std::os::raw::c_char,
        optional_args: *const LiteRtLmConversationOptionalArgs,
        callback: LiteRtLmStreamCallback,
        callback_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_render_message_to_string(
        conversation: *mut LiteRtLmConversation,
        message_json: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_render_preface_to_string(
        conversation: *mut LiteRtLmConversation,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_cancel_process(conversation: *mut LiteRtLmConversation);
}
unsafe extern "C" {
    pub fn litert_lm_conversation_get_benchmark_info(
        conversation: *mut LiteRtLmConversation,
    ) -> *mut LiteRtLmBenchmarkInfo;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_get_token_count(
        conversation: *mut LiteRtLmConversation,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_engine_tokenize(
        engine: *mut LiteRtLmEngine,
        text: *const ::std::os::raw::c_char,
    ) -> *mut LiteRtLmTokenizeResult;
}
unsafe extern "C" {
    pub fn litert_lm_tokenize_result_delete(result: *mut LiteRtLmTokenizeResult);
}
unsafe extern "C" {
    pub fn litert_lm_tokenize_result_get_tokens(
        result: *const LiteRtLmTokenizeResult,
    ) -> *const ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_tokenize_result_get_num_tokens(result: *const LiteRtLmTokenizeResult)
        -> usize;
}
unsafe extern "C" {
    pub fn litert_lm_engine_detokenize(
        engine: *mut LiteRtLmEngine,
        tokens: *const ::std::os::raw::c_int,
        num_tokens: usize,
    ) -> *mut LiteRtLmDetokenizeResult;
}
unsafe extern "C" {
    pub fn litert_lm_detokenize_result_delete(result: *mut LiteRtLmDetokenizeResult);
}
unsafe extern "C" {
    pub fn litert_lm_detokenize_result_get_string(
        result: *const LiteRtLmDetokenizeResult,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_token_union_delete(token_union: *mut LiteRtLmTokenUnion);
}
unsafe extern "C" {
    pub fn litert_lm_token_union_get_type(
        token_union: *const LiteRtLmTokenUnion,
    ) -> LiteRtLmTokenUnionType;
}
unsafe extern "C" {
    pub fn litert_lm_token_union_get_string(
        token_union: *const LiteRtLmTokenUnion,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_token_union_get_ids(
        token_union: *const LiteRtLmTokenUnion,
        out_tokens: *mut *const ::std::os::raw::c_int,
        out_num_tokens: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_token_unions_delete(tokens: *mut LiteRtLmTokenUnions);
}
unsafe extern "C" {
    pub fn litert_lm_token_unions_get_num_tokens(tokens: *const LiteRtLmTokenUnions) -> usize;
}
unsafe extern "C" {
    pub fn litert_lm_token_unions_get_token_at(
        tokens: *const LiteRtLmTokenUnions,
        index: usize,
    ) -> *mut LiteRtLmTokenUnion;
}
unsafe extern "C" {
    pub fn litert_lm_engine_get_start_token(engine: *mut LiteRtLmEngine)
        -> *mut LiteRtLmTokenUnion;
}
unsafe extern "C" {
    pub fn litert_lm_engine_get_stop_tokens(
        engine: *mut LiteRtLmEngine,
    ) -> *mut LiteRtLmTokenUnions;
}
